--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,12 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: midimapper
-  description: Mapping midi all day long
-  # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
-  #   backstage.io/techdocs-ref: dir:.
+  annotations:
+    github.com/project-slug: idanski/midimapper
 spec:
   type: service
-  owner: idanski1@gmail.com  
-  lifecycle: experimental
+  lifecycle: unknown
